<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/latar"
    tools:context=".page_aboutFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/space"
        android:layout_marginBottom="10dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="719dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="TextSizeCheck">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/bg_3"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="10dp">

                <TextView
                    android:id="@+id/card_title_saya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/card_title_saya"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/card_title_saya"
                    android:background="@color/space"></View>

                <ImageView
                    android:id="@+id/img_saya"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_below="@+id/card_title_saya"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:src="@drawable/about" />

                <TextView
                    android:id="@+id/card_content_saya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_saya"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/text_content_saya"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="VisualLintLongText" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/card_title_contactme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/contactme"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/space"></View>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:text="@string/email"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="10dp"
            android:text="@string/nohp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ig"
            android:layout_width="183dp"
            android:layout_height="30dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/ig"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/maps"
            android:layout_width="182dp"
            android:layout_height="30dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"

            android:drawablePadding="10dp"
            android:text="@string/maps"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/card_title_appinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_info"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_saya"
            android:layout_width="391dp"
            android:layout_height="50dp"
            android:src="@drawable/vector"
            tools:ignore="DuplicateIds" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/version"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>