<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/latar"
    android:gravity="center_horizontal"
    tools:context=".home_page">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:src="@drawable/vector" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/bg_4"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FDE353"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title_saya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/card_title_saya"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_saya"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/card_title_saya"
                android:layout_marginHorizontal="137dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/card_content_saya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_saya"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/text_content_saya"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/bg_4"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/card_title_hobby"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_content_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_title_hobby"
                android:layout_margin="5dp"
                android:text="@string/text_content_hobby"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/bg_4"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title_makes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/card_title_makes"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_content_makes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_title_makes"
                android:layout_margin="5dp"
                android:text="@string/text_content_makes"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/bg_4"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFEFE"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title_mikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/card_title_mikes"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_content1_mikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_title_mikes"
                android:layout_margin="5dp"
                android:text="@string/text_content1_mikes"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/card_content2_mikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_title_mikes"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/card_content1_mikes"
                android:text="@string/text_content2_mikes"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>