<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".page_homeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/latar"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="30dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/vector" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/welcome" />



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFDFD"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_saya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/card_title_saya"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_saya"
                        android:layout_width="370dp"
                        android:layout_height="138dp"
                        android:layout_below="@+id/card_title_saya"
                        android:layout_gravity="center"
                        android:src="@drawable/about" />

                    <TextView
                        android:id="@+id/card_content_saya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_saya"
                        android:layout_margin="5dp"
                        android:text="@string/text_content_saya"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_hobby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/card_title_hobby"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/layout_view_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_title_hobby"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_prev_card_hobby"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:backgroundTint="#FDE353"
                            android:text="@string/prev"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <ImageView
                            android:id="@+id/img_hobby"
                            android:layout_width="180dp"
                            android:layout_height="110dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="10dp" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_next_card_hobby"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:backgroundTint="#FDE353"
                            android:text="@string/next"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/card_content_hobby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_view_img"
                        android:layout_margin="5dp"
                        android:text="@string/text_content_hobby"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_makes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/card_title_makes"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_ayam"
                        android:layout_width="180dp"
                        android:layout_height="110dp"
                        android:layout_below="@+id/card_title_makes"
                        android:layout_marginHorizontal="95dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ayam_goreng" />

                    <TextView
                        android:id="@+id/card_content_makes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_ayam"
                        android:layout_margin="5dp"
                        android:text="@string/text_content_makes"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_mikes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/card_title_mikes"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/layout_view_img_minum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_title_mikes"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_prev_card_mikes"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:backgroundTint="#FDE353"
                            android:text="@string/prev"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <ImageView
                            android:id="@+id/img_mikes"
                            android:layout_width="180dp"
                            android:layout_height="110dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="10dp" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_next_card_mikes"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:backgroundTint="#FDE353"
                            android:text="@string/next"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/card_content1_mikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_view_img_minum"
                        android:layout_margin="5dp"
                        android:text="@string/text_content1_mikes"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>